--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2",
     "jest": "^27.3.1"
+  },
+  "dependencies": {
+    "@hapi/hapi": "^20.2.1"
   }
 }
